--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Networking - Accueil</title>
+    <link href="style.css" rel="stylesheet" />
 
+
+  </head>
+  <body>
+    <main>
+      <header>
+        <div class="content-width">
+          <h1 id="MT">Le Networking dans les Jeux Vidéo</h1>
+          <p id="SMT">Les jeux multijoueurs...
+		  Comment ça marche, exactement ?</p>
+        </div>
+		<br/>
+		<hr/>
+      </header>
+
+
+      <div class="content-width">
+        <p></p>
+        <h2 class="TL">Tout savoir sur la mise en réseau des jeux !</h2>
+  
+        <p>
+			A travers ses trois chapitres, ce site est l'outil parfait pour apprendre et comprendre les différentes <b>techniques</b> 
+			et <b>technologies</b> utilisées par les développeurs de jeux vidéo lors de la conception d'un jeu multijoueur !
+		</p>
+		
+        <p>
+			Plusieurs thèmes seront en effet étudiés, allant des technologies fondamentales de transmission de l'information,
+			aux protocoles de transport, aux techniques complexes de synchronisation d'état et d'interpolation d'entités !
+		</p>
+		
+		<p><b>S'ensuit le plan des trois différents chapitres étudiés:</b></p>
+		<ol>
+			<li>Technologies fondamentales, protocoles...</li>
+			<li>Techniques d'implémentation</li>
+			<li>Amélioration de l'expérience utilisateur, fluidification</li>
+		</ol>
+		<p><em>En annexe, nous verrons également quelques exemples précis.</em></p>
+		<br/>
+		
+        <h3>Gingerbread gummi bears</h3>
+  
+        <p><em>Tiramisu sweet pastry</em> danish topping ice cream caramels. Tiramisu candy liquorice jelly-o marzipan candy canes cupcake topping. Gummi bears jujubes carrot cake shortbread sesame snaps marshmallow danish pudding cotton candy. <strong>Cake jujubes biscuit</strong> topping marzipan sweet roll apple pie bonbon. Bear claw donut bear claw bonbon caramels halvah gummi bears. Gummi bears apple pie jelly-o donut sesame snaps icing marzipan.</p>
+  
+        <p><strong><em>Bonbon chupa chups</em></strong> donut dessert pudding. Sweet roll caramels dessert muffin croissant. Powder chocolate lollipop ice cream bonbon pie candy muffin cotton candy. Fruitcake topping chupa chups toffee jelly-o halvah. Candy soufflé toffee gummies fruitcake oat cake chocolate cake. Dessert cupcake cheesecake sweet roll bear claw. Marshmallow halvah bear claw biscuit dragée marzipan lemon drops jelly.</p>
+      </div>
+    </main>
+  </body>
+</html>
