--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Networking - Accueil</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
 
 
   </head>
   <body>
-    <main>
       <header>
         <div class="content-width">
-          <h1 id="MT">Le Networking dans les Jeux Vidéo</h1>
+          <h1 id="MT">Le Networking dans 
+		  les Jeux Vidéo</h1>
           <p id="SMT">Les jeux multijoueurs...
 		  Comment ça marche, exactement ?</p>
         </div>
-		<br/>
-		<hr/>
       </header>
+	  	<div id="navbar">
+			<a class="ni active" href="index.html">accueil</a>
+			<a class="ni" href="javascript:void(0)">chapitre un</a>
+			<a class="ni" href="javascript:void(0)">chapitre deux</a>
+			<a class="ni" href="javascript:void(0)">chapitre trois</a>
+			<a class="ni" href="javascript:void(0)">exemples</a>
+		</div><br/>
 
 
       <div class="content-width">
@@ -44,12 +49,29 @@
 		<p><em>En annexe, nous verrons également quelques exemples précis.</em></p>
 		<br/>
 		
-        <h3>Gingerbread gummi bears</h3>
+        <h2>A propos de ce site</h2>
   
-        <p><em>Tiramisu sweet pastry</em> danish topping ice cream caramels. Tiramisu candy liquorice jelly-o marzipan candy canes cupcake topping. Gummi bears jujubes carrot cake shortbread sesame snaps marshmallow danish pudding cotton candy. <strong>Cake jujubes biscuit</strong> topping marzipan sweet roll apple pie bonbon. Bear claw donut bear claw bonbon caramels halvah gummi bears. Gummi bears apple pie jelly-o donut sesame snaps icing marzipan.</p>
-  
-        <p><strong><em>Bonbon chupa chups</em></strong> donut dessert pudding. Sweet roll caramels dessert muffin croissant. Powder chocolate lollipop ice cream bonbon pie candy muffin cotton candy. Fruitcake topping chupa chups toffee jelly-o halvah. Candy soufflé toffee gummies fruitcake oat cake chocolate cake. Dessert cupcake cheesecake sweet roll bear claw. Marshmallow halvah bear claw biscuit dragée marzipan lemon drops jelly.</p>
-      </div>
-    </main>
+        <p>Créé en 2022 par Victor Guihaire.</p>
+		<p>
+			Code libre de droit et open-source. Veuillez visionner 
+			<a class="tlink" target ="_blank" href="https://github.com/cloud-worm/networking/blob/main/LICENSE">la license</a> 
+			pour plus d'informations.
+		</p>
+        <p>
+			Ce site a été développé dans le cadre d'un projet scolaire. Son objectif est d'instruire de façon simple, mais détaillée, comment
+			sont développées les fontionnalités d'interaction humain-humain dans un jeu vidéo. Ces interactions sont en effet utilisées par
+			un très grand nombre de lycéens, tels que moi-même, et il m'a donc paru intéressant d'en parler.
+		</p>
+		<p>Tout a été créé sans librairie ou ressources externes, mis à part les documents audiovisuels utilisés comme illustrations ou exemples.</p>
+		<p>
+			Pour en apprendre plus sur la conception du site (stylisation avec CSS3, etc.), voir le fichier Markdown
+			<a class="tlink" target ="_blank" href="https://github.com/cloud-worm/networking/blob/main/conception.md">conception.md</a> sur GitHub.
+		</p>
+		<footer> <!-- tout doit être relié, sinon erreurs de whitespace -->
+			<a class="foot" target ="_blank" href="https://github.com/cloud-worm/networking">github</a>&nbsp;&nbsp;•&nbsp;&nbsp;<a class="foot" target ="_blank" href="https://cloud-worm.github.io/networking/sources.txt">sources</a>
+		</footer>
+	  </div>
+	
+	<!--<script src="scripts/navbar.js"></script>-->
   </body>
 </html>
