--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -18,8 +19,8 @@
         </div>
       </header>
 	  	<div id="navbar">
-			<a class="ni active" href="index.html">accueil</a>
-			<a class="ni" href="javascript:void(0)">chapitre un</a>
+			<a class="ni active" href="javascript:void(0)">accueil</a>
+			<a class="ni" href="./un">chapitre un</a>
 			<a class="ni" href="javascript:void(0)">chapitre deux</a>
 			<a class="ni" href="javascript:void(0)">chapitre trois</a>
 			<a class="ni" href="javascript:void(0)">exemples</a>
