--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	  	<div id="navbar">
 			<a class="ni active" href="javascript:void(0)">accueil</a>
 			<a class="ni" href="./un">chapitre un</a>
-			<a class="ni" href="javascript:void(0)">chapitre deux</a>
-			<a class="ni" href="javascript:void(0)">chapitre trois</a>
-			<a class="ni" href="javascript:void(0)">exemples</a>
+			<a class="ni" href="./deux">chapitre deux</a>
+			<a class="ni" href="./trois">chapitre trois</a>
+			<a class="ni" href="./exemples">exemples</a>
 		</div><br/>
 
 
