--- a/un/index.html
+++ b/un/index.html
@@ -18,11 +18,11 @@
         </div>
       </header>
 	  	<div id="navbar">
-			<a class="ni" href="../index.html">accueil</a>
-			<a class="ni active" href="index.html">chapitre un</a>
-			<a class="ni" href="../deux/index.html">chapitre deux</a>
-			<a class="ni" href="javascript:void(0)">chapitre trois</a>
-			<a class="ni" href="javascript:void(0)">exemples</a>
+			<a class="ni" href="../">accueil</a>
+			<a class="ni active" href="javascript:void(0)">chapitre un</a>
+			<a class="ni" href="../deux">chapitre deux</a>
+			<a class="ni" href="../trois">chapitre trois</a>
+			<a class="ni" href="../exemples">exemples</a>
 		</div><br/>
 
 
