--- a/deux/index.html
+++ b/deux/index.html
@@ -17,11 +17,11 @@
         </div>
       </header>
 	  	<div id="navbar">
-			<a class="ni" href="../index.html">accueil</a>
-			<a class="ni" href="../un/index.html">chapitre un</a>
+			<a class="ni" href="../">accueil</a>
+			<a class="ni" href="../un">chapitre un</a>
 			<a class="ni active" href="javascript:void(0)">chapitre deux</a>
-			<a class="ni" href="javascript:void(0)">chapitre trois</a>
-			<a class="ni" href="javascript:void(0)">exemples</a>
+			<a class="ni" href="../trois">chapitre trois</a>
+			<a class="ni" href="../exemples">exemples</a>
 		</div><br/>
 
 
