--- a/trois/index.html
+++ b/trois/index.html
@@ -81,7 +81,7 @@
 		
 		<p>
 			Déjà, parlons d'une technique très importante : la <b>prédiction</b> (<em>client-side prediction</em>, terme originel anglais). Quand
-			on crée un jeu sur l'<em>Unreal Engine</em> de'<em>Epic Games</em>, moteur de jeu vastement utilisé pour les jeux multijoueurs, les 
+			on crée un jeu sur l'<em>Unreal Engine</em> de <em>Epic Games</em>, moteur de jeu vastement utilisé pour les jeux multijoueurs, les 
 			personnages qu'on peut contrôler ont une prédiction, par défaut, c'est-à-dire que quand un mouvement est effectué, ce mouvement sera
 			montré sur l'écran <em>avant</em> la réception de l'état correspondant, en prenant le risque qu'il soit faux. Cependant, si la prédiction
 			est bien mise en place, le mouvement est rarement faux, et la fluidification est largement améliorée.
