--- a/un/index.html
+++ b/un/index.html
@@ -68,7 +68,7 @@
 		
         <h2 class="TL">Le client-serveur : le modèle moderne</h2>
   
-        <p>Aujourd'hui, le P2P n'est qu'utilisé dans certaines situations très spécifiques. Le modèle de loins le plus important, et celui
+        <p>Aujourd'hui, le P2P n'est qu'utilisé dans certaines situations très spécifiques. Le modèle de loin le plus important, et celui
 		dont nous allons parler sur le reste de ce site, est le modèle <b>client-serveur</b>.</p>
 		
 		<p>
